@@ -24,9 +24,8 @@
 package io.github.redpanda4552.HifumiBot.util;
 
 import java.net.InetAddress;
-import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
-import java.net.UnknownHostException;
 
 import org.xbill.DNS.Address;
 
@@ -41,7 +40,7 @@ public class Internet {
 
     public static DNSQueryResult nslookup(String urlStr) {
         try {
-            URL url = new URL(urlStr);
+            URL url = new URI(urlStr).toURL();
             String host = url.getHost();
             InetAddress addr = Address.getByName(host);
             String ret = addr.getHostAddress();
@@ -51,7 +50,7 @@ public class Internet {
             } else {
                 return DNSQueryResult.SUCCESS;
             }
-        } catch (UnknownHostException | MalformedURLException e) {
+        } catch (Exception e) {
             return DNSQueryResult.FAIL;
         }
     }
